overflow fixed

--- a/Aula 02 - Components, Routing/mySite/src/app/features/main-page/main-page.component.css
+++ b/Aula 02 - Components, Routing/mySite/src/app/features/main-page/main-page.component.css
@@ -1,4 +1,12 @@
 .main-container {
     display: flex;
     font-size: 2vh;
+    height: 100vh;
+    overflow: hidden;
+}
+
+main {
+    flex: 1;
+    overflow-y: auto;
+    margin: 1vh;
 }
